--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(TicketSystem_2021_main
                src/main.cpp src/cmdprocessor.hpp src/systemcore.hpp
-               lib/mytool.hpp lib/hashtable.hpp lib/timetype.hpp
-               db/blocklist.h db/filemanager.hpp lib/mytools.hpp)
+               lib/mytools.hpp lib/hashtable.hpp lib/timetype.hpp
+               db/blocklist.h db/filemanager.hpp )
